// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArticleCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/caf4fe/caf4fe"
        style={
          Object {
            "color": undefined,
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 jgfcQX"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        />
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 fqFQBk"
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<ArticleCard /> with articleTitle and articleSubTitle props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/caf4fe/caf4fe"
        style={
          Object {
            "color": undefined,
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 jgfcQX"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          Custom title
        </p>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 fqFQBk"
        />
        <p
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={
            Object {
              "flex": 1,
              "lineHeight": "1rem",
              "overflow": "hidden",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
            width={0}
          >
            <span />
            <span>
              Custom subtitle
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<ArticleCard /> with ignored props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/caf4fe/caf4fe"
        style={
          Object {
            "color": undefined,
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/caf4fe/caf4fe"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 jgfcQX"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        />
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 fqFQBk"
        />
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<ArticleCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <a
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href="#foobar"
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "5px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer marger__StyledMarger-q3lecu-0 dRjxbN"
    >
      <img
        alt="Image alt"
        className="k-Card__image"
        data-radium={true}
        src="#image"
        style={
          Object {
            "color": "#333",
            "display": "block",
            "position": "absolute",
            "textAlign": "center",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        className="marger__StyledMarger-q3lecu-0 hAgZUM"
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt="Avatar alt"
            className="k-ButtonImage__img"
            src="#avatar"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Custom title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Custom description
        </div>
      </div>
    </div>
    <div
      className="marger__StyledMarger-q3lecu-0 jgfcQX"
    >
      <div
        className="marger__StyledMarger-q3lecu-0 kmLYBJ"
      >
        <h4
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          Custom title
        </h4>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 deRNwX"
      >
        <span
          className="horizontal-stroke__StyledHorizontalStroke-sc-15k7x5m-0 fqFQBk"
        />
        <p
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={
            Object {
              "flex": 1,
              "lineHeight": "1rem",
              "overflow": "hidden",
              "whiteSpace": "nowrap",
            }
          }
        >
          <span
            style={
              Object {
                "whiteSpace": "nowrap",
              }
            }
            width={0}
          >
            <span />
            <span>
              Custom subtitle
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </p>
      </div>
    </div>
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
